<?xml version="1.0"?>
<package format="2">
  <name>arti_collision_avoidance_msgs</name>
  <version>1.0.0</version>
  <description>Message definitions used by arti_costmap_collision_checker</description>


  <maintainer email="a.buchegger@arti-robots.com">Alexander Buchegger</maintainer>

  <author email="a.buchegger@arti-robots.com">Alexander Buchegger</author>
  <author email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</author>

  <license>BSD</license>
  
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>nav_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <export>
  </export>
</package>
