<?xml version="1.0"?>
<package format="2">
  <name>arti_costmap_layer</name>
  <version>0.13.0</version>
  <description>Package providing an abstract interface costmaps which ensures a minimum of feedback</description>

  <license>All rights reserved</license>

  <maintainer email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</maintainer>

  <author email="c.muehlbacher@arti-robots.com">Clemens Mühlbacher</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>costmap_2d</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>costmap_2d</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>costmap_2d</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
